RESOLVED FIXED20451
Inspector doesn't auto scroll when selecting text
https://bugs.webkit.org/show_bug.cgi?id=20451
Summary Inspector doesn't auto scroll when selecting text
Gavin Sherlock
Reported 2008-08-19 15:09:51 PDT
Steps to reproduce: 1. Go to a url 2. Right click and Inspect Element for anything on the page 3. In the Inspector, Select Resources, and click on a resource (can be js or html, or some other text file) 4. Select text in the resource, and drag beyond the bottom of the window Expected results: Window will scroll, so text off screen will be selected too. Actual results: No scrolling occurs. Tested in r35814 on 10.5.4 on a MacPro.
Attachments
Timothy Hatcher
Comment 1 2008-08-19 15:41:56 PDT
I think this is a regression caused by r35244.
Maxime Britto
Comment 2 2008-08-20 18:53:08 PDT
I don't think the bug is related to r35244, I've looked into it and it seems that according to the mouse eventm the first node under the mouse is the HTML node from the whole inspector, instead of the text node included in the current displayed ressource div.
Maxime Britto
Comment 3 2008-08-21 12:13:00 PDT
Timothy Hatcher
Comment 4 2008-08-22 13:44:40 PDT
Fixed in r35882.
Note You need to log in before you can comment on or make changes to this bug.