2008-08-21  Maxime Britto  <britto@apple.com>

Reviewed by Kevin McCullough.

        Test: fast/events/autoscroll-nonscrollable-iframe-in-scrollable-div.html
        https://bugs.webkit.org/show_bug.cgi?id=20451

        rdar://problem/6166435 Inspector doesn't auto scroll when selecting text (20451)
        When we climb up the rendering tree looking for a scrollable renderer, we need to be able to jump outside of an iframe.
        This way we can see if what is embedding the iframe can be scrolled even if the iframe content can't.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleMouseDraggedEvent): when we reach the document node and it can't be scrolled we set the next parent as the document's owner element if it exists.

        (WebCore::EventHandler::handleMousePressEvent): ditto


2008-08-21  Maxime Britto  <britto@apple.com>

        Reviewed by Kevin McCullough.

        rdar://problem/6166435 Inspector doesn't auto scroll when selecting text (20451)
        https://bugs.webkit.org/show_bug.cgi?id=20451

        This test can be run automatically or manually as well.

        * fast/events/autoscroll-nonscrollable-iframe-in-scrollable-div-expected.txt: Added.
        * fast/events/autoscroll-nonscrollable-iframe-in-scrollable-div.html: Added.
        * fast/events/resources/big-page-with-overflow-hidden.html: Added.




Canonical link: https://commits.webkit.org/28288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35882 268f45cc-cd09-0410-ab3c-d52691b4dbfc